refactor: replace URL with URI, add exception handler